--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,348 @@
-<p>Hello</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" type="image/x-icon" href="assets/images/logo-1.png" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
+
+    <title>Aflorá</title>
+  </head>
+  <body>
+    <header>
+      <h3><a href="/">Aflorá</a></h3>
+      <div class="header-right-contant">
+        <h5><a href="/produtos">Produtos</a></h5>
+
+        <h5><a href="/blog">Blog</a></h5>
+
+        <div class="dropdown">
+          <a
+            class="btn btn-secondary btn-sm dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Gerenciar
+          </a>
+
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="/gerenciar-produtos">Produtos</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/gerenciar-estoque">Estoque</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/gerenciar-usuarios">Usuários</a>
+            </li>
+            <li><a class="dropdown-item" href="/gerenciar-blog">Blog</a></li>
+          </ul>
+        </div>
+
+        <button class="p-0" data-bs-target="#loginModal" data-bs-toggle="modal">
+          <img src="assets/images/user-icon.svg" alt="ícone de usuário" />
+        </button>
+      </div>
+    </header>
+
+    <div class="home-container">
+      <section class="s1">
+        <div class="s1-container">
+            <h1>Dê um toque de estilo ao seu lar com os vasos Aflorá.</h1>
+
+            <h5>Bem vindo a Aflorá Vasos Decorativos, onde a arte encontra a simplicidade. Descubra nossa deslumbrante coleção de vasos decorativos que transformarão sua casa em um santuário de estilo.</h5>
+
+            <button class="s1-button1">Contato</button>
+            <button class="s1-button2">WhatsApp</button>
+        </div>
+      </section>
+
+      <section section class="s2">
+        <div class="s2-container">
+            <h1>Descubra nossos vasos decorativos exclusivos e transforme seu ambiente!</h1>
+
+            <h5>Cada vaso é uma obra de arte, feita à mão com cuidado. Eleve seu espaço com nossos designs únicos que contam uma história.</h5>
+        </div>
+
+        <div class="carousel-images">
+            <div class="carousel-home-item">
+                <img src="assets/images/home-image-1.png" alt="Home image 1">
+                <div class="p-3">
+                    <h4>Feito à mão, com carinho e cuidado.</h4>
+                    <h6>Cada vaso é único, moldado com as mãos de quem ama a cerâmica.</h6>
+                </div>
+            </div>
+
+            <div class="carousel-home-item">
+                <img src="assets/images/home-image-2.png" alt="Home image 2">
+                <div class="p-3">
+                    <h4>Materiais naturais, para um futuro sustentável.</h4>
+                    <h6>Utilizamos apenas materiais sustentáveis para criar beleza.</h6>
+                </div>
+            </div>
+
+            <div class="carousel-home-item">
+                <img src="assets/images/home-image-3.png" alt="Home image 3">
+                <div class="p-3">
+                    <h4>Designs únicos para todos os estilos.</h4>
+                    <h6>Encontre o vaso perfeito para complementar sua decoração.</h6>
+                </div>
+            </div>
+        </div>
+      </section>
+
+      <section section class="s3">
+        <div>
+            <div class="colections-title">
+                <h3>Coleção de Vasos</h3>
+                <h6>Encante-se com nossa coleção de vasos decorativos.</h6>
+            </div>
+
+            <div class="d-flex justify-content-center">
+                <img src="assets/images/home-comments.png" alt="Comentários">
+            </div>
+        </div>
+      </section>
+
+      <section section class="s4">
+        <div>
+            <h3>Fale conosco pelo WhatsApp</h3>
+            <h6>Não perca tempo! Entre em contato hoje mesmo para mais informações ou compras.</h6>
+        </div>
+        <div>
+            <button class="s4-button1">Contato</button>
+            <button class="s4-button2">Saiba Mais</button>
+        </div>
+      </section>
+
+      <section section class="s5">
+        <div class="comments-title">
+            <h3>Satisfação Garantida</h3>
+            <h6>"Meus vasos da Aflora são tipo o acessório perfeito pra qualquer cantinho."</h6>
+        </div>
+        <div class="comments-container">
+            <div>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+
+                <h5>"A qualidade é incrível e os designs são lindos!"</h5>
+                <h6>Emily Santos</h6>
+            </div>
+            <div>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+
+                <h5>"Todo mundo elogia quando tenho visitas!"</h5>
+                <h6>Maicon Fernandes</h6>
+            </div>
+            <div>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+                <i class="fa fa-star" style="color: #192D37;"></i>
+
+                <h5>"Esses vasos deram o toque final que eu precisava!"</h5>
+                <h6>Maria Clara</h6>
+            </div>
+        </div>
+      </section>
+    </div>
+
+    <footer>
+        <div style="height: 1px; border: 1px solid black; margin: 24px 0;"></div>
+
+        <div class="footer-container">
+            <img style="height: 124px;" src="assets/images/logo-1.png" alt="Logo Aflorá">
+
+            <div class="footer-info">
+                <div class="footer-social-network">
+                    <a href="https://www.instagram.com/aflora"><img src="assets/images/instagram-icon.svg" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/aflora"><img src="assets/images/facebook-icon.svg" alt="Facebook"></a>
+                    <a href="https://www.twiiter.com/aflora"><img src="assets/images/x-icon.svg" alt="X"></a>
+                </div>
+                
+                <p class="m-0">© 2024 Aflora Vasos Decorativos. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Sign In/Sign Up modal -->
+    <div
+      class="modal fade"
+      id="loginModal"
+      aria-hidden="true"
+      aria-labelledby="loginModalLabel"
+      tabindex="-1"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+
+            <div class="d-flex flex-column align-items-center login-modal-body">
+                <h4 class="text-center">Entre com sua conta para acessar a <br><span style="color: #FFEEDC;">Aflorá</span></br></h4>
+
+                <div>
+                    <button
+                    class="btn first-login-button"
+                    data-bs-target="#loginModal2"
+                    data-bs-toggle="modal"
+                  >
+                    Login
+                  </button>
+      
+                  <button
+                    class="btn second-login-button"
+                    data-bs-target="#loginModal3"
+                    data-bs-toggle="modal"
+                  >
+                    Cadastrar
+                  </button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="loginModal2"
+      aria-hidden="true"
+      aria-labelledby="loginModalLabel2"
+      tabindex="-1"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header border-0">
+            <h1 class="modal-title fs-5" id="loginModalLabel2">
+              Login
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body border-0">
+            <h5>Insira suas informações de acesso:</h5>
+
+            <p class="m-0">E-mail / Usuário:</p>
+            <input class="w-100" type="text">
+
+            <p class="m-0">Senha:</p>
+            <input class="w-100" type="password">
+          </div>
+          <div class="modal-footer border-0">
+            <button
+              class="btn"
+              data-bs-target="#loginModal"
+              data-bs-toggle="modal"
+            >
+              Voltar
+            </button>
+            <button
+                style="background-color: #FFEEDC; border: 1px solid black;"
+              class="btn btn-green"
+            >
+              Login
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="loginModal3"
+      aria-hidden="true"
+      aria-labelledby="loginModalLabel3"
+      tabindex="-1"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header border-0">
+            <h1 class="modal-title fs-5" id="loginModalLabel3">
+              Cadastrar
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body border-0">
+            <h5>Insira suas informações para realizar seu cadastro:</h5>
+
+            <p class="m-0">Nome completo</p>
+            <input class="w-100" type="text">
+
+            <p class="m-0">E-mail</p>
+            <input class="w-100" type="text">
+
+            <p class="m-0">Telefone</p>
+            <input class="w-100" type="text">
+
+            <p class="m-0">Senha</p>
+            <input class="w-100" type="password">
+
+            <p class="m-0">Repetir senha</p>
+            <input class="w-100" type="password">
+          </div>
+          <div class="modal-footer border-0">
+            <button
+              class="btn"
+              data-bs-target="#loginModal"
+              data-bs-toggle="modal"
+            >
+              Voltar
+            </button>
+            <button
+                style="background-color: #FFEEDC; border: 1px solid black;"
+              class="btn btn-green"
+            >
+              Cadastrar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="assets/js/index.js"></script>
+  </body>
+</html>
