Página de produtos

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
   <body>
     <header>
       <h3><a href="/">Aflorá</a></h3>
-      <div id="logged-content" class="header-right-contant">
-        <h5><a href="/produtos">Produtos</a></h5>
+      <div id="logged-content" class="header-right-content">
+        <h5><a href="/pages/product.html">Produtos</a></h5>
 
-        <h5><a href="/blog">Blog</a></h5>
+        <h5><a href="/pages/blog.html">Blog</a></h5>
       </div>
     </header>
 
