Cadastro de produtos

--- a/public/pages/product.html
+++ b/public/pages/product.html
@@ -50,14 +50,14 @@
                 <button id="sale-button">Faça seu pedido</button>
             </div>
             <div class="image">
-                <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
+                <div id="imagesCarousel" class="carousel carousel-fade" data-bs-ride="false">
                     <div class="carousel-inner" id="carousel-product-images"></div>
 
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#imagesCarousel" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#imagesCarousel" data-bs-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
                     </button>
