--- a/public/pages/products-managment.html
+++ b/public/pages/products-managment.html
@@ -77,11 +77,11 @@
             <h4 class="text-center">Tem cereteza que deseja excluir este produto?</h4>
 
             <div>
-              <button class="btn first-login-button" data-bs-target="#loginModal2" data-bs-toggle="modal">
+              <button class="btn first-login-button" onclick="deleteProduct()">
                 Sim
               </button>
 
-              <button class="btn second-login-button" data-bs-target="#loginModal3" data-bs-toggle="modal">
+              <button class="btn second-login-button" data-bs-dismiss="modal">
                 Não
               </button>
             </div>
