Crate/Update product

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <header>
       <h3><a href="/">Aflorá</a></h3>
       <div id="logged-content" class="header-right-content">
-        <h5><a href="/pages/product.html">Produtos</a></h5>
+        <h5><a href="/pages/products.html">Produtos</a></h5>
 
         <h5><a href="/pages/blog.html">Blog</a></h5>
       </div>
