Continuação do blog

--- a/public/pages/blog.html
+++ b/public/pages/blog.html
@@ -27,7 +27,34 @@
     </div>
   </header>
 
-  <div class="blog-container">
+  <div class="posts-container">
+    <div id="loadSpinner" style="height: 100%; display: none; justify-content: center; align-items: center;">
+      <div class="spinner-border text-dark" role="status" style="margin-top: 4px;">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+
+    <div class="division">
+      <div class="description">
+        <h6>Blog</h6>
+        <h3 id="main-post-type"></h3>
+        <h1 id="main-post-title"></h1>
+        <h3 id="main-post-description"></h3>
+
+        <h5>Compartilhe com os outros!</h5>
+        <div id="main-post-share"></div>
+      </div>
+
+      <div id="main-post-image-container"> </div>
+    </div>
+
+    <div class="posts-head">
+      <h6>Blog</h6>
+      <h1>Se liga nas novidades!</h1>
+      <h5>Explore nossas dicas e tendências sobre vasos decorativos.</h5>
+    </div>
+
+    <div id="posts-content"> </div>
   </div>
 
   <footer>
@@ -39,6 +66,7 @@
       <div class="footer-info">
         <div class="footer-social-network">
           <a href="https://www.instagram.com/aflora"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
+          <a href="https://wa.me/5531999999999"><img src="../assets/images/whatsapp-icon.png" alt="whatsapp"></a>
           <a href="https://www.facebook.com/aflora"><img src="../assets/images/facebook-icon.svg" alt="Facebook"></a>
           <a href="https://www.twiiter.com/aflora"><img src="../assets/images/x-icon.svg" alt="X"></a>
         </div>
