--- a/public/pages/blog-managment.html
+++ b/public/pages/blog-managment.html
@@ -61,6 +61,7 @@
       <div class="footer-info">
         <div class="footer-social-network">
           <a href="https://www.instagram.com/aflora"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
+          <a href="https://wa.me/5531999999999"><img src="../assets/images/whatsapp-icon.png" alt="whatsapp"></a>
           <a href="https://www.facebook.com/aflora"><img src="../assets/images/facebook-icon.svg" alt="Facebook"></a>
           <a href="https://www.twiiter.com/aflora"><img src="../assets/images/x-icon.svg" alt="X"></a>
         </div>
