--- a/public/pages/post.html
+++ b/public/pages/post.html
@@ -42,7 +42,7 @@
             <span>Ver tudo</span>
           </div>
         </a>
-        
+
         <h3 id="post-type"></h3>
         <h1 id="post-title"></h1>
         <h3 id="post-description"></h3>
@@ -64,30 +64,26 @@
     </div>
   </div>
 
-  <div  id="post-container">
-    <div class="division">
+  <div id="post-container">
+      <div id="content"></div>
+
       <div class="share">
         <h3>Autor:</h3>
         <h4 id="post-author"></h4>
 
         <div style="height: 1px; border: 1px solid black; margin: 24px 0;"></div>
 
-        <h2>Mantenha-se atualizado(a)!</h2>
+        <h3><strong>Mantenha-se atualizado(a)! </strong></h3>
 
-        <button>Inscrever na newsletter</button>
+        <button class="subscribe-button" onclick="subscribe()">Inscrever na newsletter</button>
 
-        <h6>Se inscrevendo, você recebera emails e notificações sobre os posts dos contribuidores</h6>
+        <h5>Se inscrevendo, você recebera emails e notificações sobre os posts dos contribuidores.</h5>
 
         <div style="height: 1px; border: 1px solid black; margin: 24px 0;"></div>
 
-        <h5>Compartilhe com os outros!</h5>
+        <h4>Compartilhe com os outros!</h4>
         <div id="post-share"></div>
       </div>
-
-      <div id="content">
-
-      </div>
-    </div>
   </div>
 
   <footer>
