--- a/public/pages/post.html
+++ b/public/pages/post.html
@@ -184,7 +184,7 @@
             <input class="w-100" name="email" type="text">
 
             <label for="phone" class="m-0">Telefone *</label>
-            <input class="w-100" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15">
+            <input class="w-100" id="phoneInput" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15" oninput="phoneMask(event)">type="text" placeholder="(99) 99999-9999" maxlength="15">
 
             <label for="password" class="m-0">Senha *</label>
             <input class="w-100" name="password" type="password">
