--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -27,7 +27,41 @@
     </div>
   </header>
 
-  <div class="blog-container">
+  <div class="profile-container">
+    <div class="profile-title">
+      <h1>Perfil</h1>
+      <span onclick="openUpdateModal()" data-bs-target="#updateProfileModal" data-bs-toggle="modal"><i class="fa fa-edit fa-lg"></i></span>
+    </div>
+
+    <div class="photo-container">
+      <div id="user-photo"> Ainda não possui foto de perfil</div>
+      <h3 id="user-name"></h3>
+    </div>
+
+    <div class="user-info">
+      <div class="email-container">
+        <img src="../assets/images/email-icon.svg" alt="Email icon">
+        <p id="user-email">Email | </p>
+      </div>
+
+      <div class="phone-container">
+        <img src="../assets/images/whatsapp-icon.svg" alt="WhatsApp icon">
+        <p id="user-phone">Telefone | </p>
+      </div>
+    </div>
+
+    <h2>Código de convite</h2>
+    <div class="invite-code-container">
+      <img src="../assets/images/invite-code-icon.svg" alt="Código de convite icon">
+      <div>
+        <div class="invite-code-text">
+          <h5 id="user-invite-code"></h5>
+          <span onClick="copyInviteCode()"><i class="fa fa-copy"></i></span>
+        </div>
+
+        <p>Compartilhe seu código de convite com seus amigos e ganhe um desconto na hora das compras!</p>
+      </div>
+    </div>
   </div>
 
   <footer>
@@ -48,6 +82,50 @@
       </div>
     </div>
   </footer>
+
+  <!-- Toast -->
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-body">
+        Código de convite copiado para a área de transferência
+      </div>
+    </div>
+  </div>
+
+  <!-- Update profile -->
+  <div class="modal fade" id="updateProfileModal" aria-hidden="true" aria-labelledby="updateProfileLabel" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header border-0">
+          <h1 class="modal-title fs-5" id="updateProfileLabel">
+            Editar perfil
+          </h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body border-0">
+          <form id="updateProfileForm" onsubmit="return false;">
+            <label for="email" class="m-0">E-mail *</label>
+            <input class="w-100" id="editEmailInput" name="email" type="text">
+
+            <label for="phone" class="m-0">Telefone *</label>
+            <input class="w-100" id="editPhoneInput" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15" oninput="phoneMask(event)">
+
+            <label for="photo">Foto de perfil *</label>
+            <input class="w-100" id="photoInput" name="photo" type="file" onchange="readFile(this)">
+          </form>
+        </div>
+        <div class="modal-footer border-0">
+          <button class="btn" data-bs-dismiss="modal" aria-label="Close">
+            Voltar
+          </button>
+          <button style="background-color: #FFEEDC; border: 1px solid black;" class="btn btn-green" id="updateButton"
+            onclick="updateProfile()">
+            Editar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Sign In/Sign Up modal -->
   <div class="modal fade" id="loginModal" aria-hidden="true" aria-labelledby="loginModalLabel" tabindex="-1">
@@ -128,7 +206,7 @@
             <input class="w-100" name="email" type="text">
 
             <label for="phone" class="m-0">Telefone *</label>
-            <input class="w-100" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15">
+            <input class="w-100" id="phoneInput" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15" oninput="phoneMask(event)">type="text" placeholder="(99) 99999-9999" maxlength="15">
 
             <label for="password" class="m-0">Senha *</label>
             <input class="w-100" name="password" type="password">
