--- a/public/pages/users-managment.html
+++ b/public/pages/users-managment.html
@@ -27,8 +27,33 @@
         </div>
     </header>
 
-    <div class="blog-container">
-        
+    <div class="users-managment-container">
+        <div class="users-managment-title-container">
+            <h1>Diretório de usuários</h1>
+            <h6>Gerenciador de contas registradas no site.</h6>
+        </div>
+
+        <div class="users-managment-subtitle-container">
+            <h2>Usuários</h2>
+            <h6>Listagem de todos os usuários</h6>
+        </div>
+
+        <div class="serach-container">
+            <input type="text">
+            <button>Pesquisar</button>
+        </div>
+
+        <div class="users-list-container">
+            <h3>Clientes</h3>
+
+            <div id="loadSpinner" style="height: 100%; display: none; justify-content: center; align-items: center;">
+                <div class="spinner-border text-dark" role="status" style="margin-top: 4px;">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+
+            <div id="users-list"></div>
+        </div>
     </div>
 
     <footer>
@@ -39,7 +64,8 @@
 
             <div class="footer-info">
                 <div class="footer-social-network">
-                    <a href="https://www.instagram.com/aflora"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
+                    <a href="https://www.instagram.com/aflora"><img src="../assets/images/instagram-icon.svg"
+                            alt="Instagram"></a>
                     <a href="https://wa.me/5531999999999"><img src="../assets/images/whatsapp-icon.png"
                             alt="whatsapp"></a>
                     <a href="https://www.facebook.com/aflora"><img src="../assets/images/facebook-icon.svg"
@@ -132,7 +158,7 @@
                         <input class="w-100" name="email" type="text">
 
                         <label for="phone" class="m-0">Telefone *</label>
-                        <input class="w-100" id="phoneInput" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15" oninput="phoneMask(event)">type="text" placeholder="(99) 99999-9999" maxlength="15">
+                        <input class="w-100" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15" oninput="phoneMask(event)">
 
                         <label for="password" class="m-0">Senha *</label>
                         <input class="w-100" name="password" type="password">
