Melhorias no código

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
           coleção de vasos decorativos que transformarão sua casa em um santuário de estilo.</h5>
 
         <div class="s1-buttons-container">
-          <button class="s1-button1">Contato</button>
-          <button class="s1-button2">WhatsApp</button>
+          <a href="https://wa.me/5531999999999"> <button class="cta-button1">Contato</button> </a>
+          <a href="https://www.instagram.com/aflora"> <button class="cta-button22">Saiba Mais</button> </a>
         </div>
       </div>
     </section>
@@ -95,8 +95,8 @@
           <h6>Não perca tempo! Entre em contato hoje mesmo para mais informações ou compras.</h6>
         </div>
         <div>
-          <button class="s4-button1">Contato</button>
-          <button class="s4-button2">Saiba Mais</button>
+          <a href="https://wa.me/5531999999999"> <button class="cta-button1">Contato</button> </a>
+          <a href="https://www.instagram.com/aflora"> <button class="cta-button22">Saiba Mais</button> </a>
         </div>
       </section>
     </section>
@@ -239,7 +239,8 @@
             <input class="w-100" name="email" type="text">
 
             <label for="phone" class="m-0">Telefone *</label>
-            <input class="w-100" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15" oninput="phoneMask(event)">
+            <input class="w-100" name="phone" type="text" placeholder="(99) 99999-9999" maxlength="15"
+              oninput="phoneMask(event)">
 
             <label for="password" class="m-0">Senha *</label>
             <input class="w-100" name="password" type="password">
