--- a/public/pages/post.html
+++ b/public/pages/post.html
@@ -75,7 +75,7 @@
 
         <h3><strong>Mantenha-se atualizado(a)! </strong></h3>
 
-        <button class="subscribe-button" onclick="subscribe()">Inscrever na newsletter</button>
+        <div id="subscription-container"></div>
 
         <h5>Se inscrevendo, você recebera emails e notificações sobre os posts dos contribuidores.</h5>
 
