--- a/public/pages/product.html
+++ b/public/pages/product.html
@@ -47,7 +47,7 @@
                 <h2 id="product-price"></h2>
                 <h3 id="product-description"></h3>
 
-                <button id="sale-button">Faça seu pedido</button>
+                <a id="saleLink"> <button id="sale-button">Faça seu pedido</button> </a>
             </div>
             <div class="image">
                 <div id="imagesCarousel" class="carousel carousel-fade" data-bs-ride="false">
