--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,29 @@
 
 <body>
   <header>
-    <h3><a href="/">Aflorá</a></h3>
-    <div id="logged-content" class="header-right-content">
-      <h5><a href="/pages/products.html">Produtos</a></h5>
+    <div class="header-left-content">
+      <div class="small-screen-header">
+        <div class="dropdown manager-dropdown">
+          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fa fa-bars"></i>
+          </a>
+  
+          <ul class="dropdown-menu">
+            <li> <a class="dropdown-item" href="/pages/products.html">Produtos</a> </li>
+            <li> <a class="dropdown-item" href="/pages/blog.html">Blog</a> </li>
+          </ul>
+        </div>
+      </div>
+  
+      <h3><a href="/">Aflorá</a></h3>
+    </div>
 
-      <h5><a href="/pages/blog.html">Blog</a></h5>
+    <div id="logged-content" class="header-right-content">
+      <div class="large-screen-header">
+        <h5><a href="/pages/products.html">Produtos</a></h5>
+        <h5><a href="/pages/blog.html">Blog</a></h5>
+      </div>
     </div>
   </header>
 
@@ -36,8 +54,8 @@
           coleção de vasos decorativos que transformarão sua casa em um santuário de estilo.</h5>
 
         <div class="s1-buttons-container">
-          <a href="https://wa.me/5531999999999"> <button class="cta-button1">Contato</button> </a>
-          <a href="https://www.instagram.com/aflora"> <button class="cta-button22">Saiba Mais</button> </a>
+          <a href="https://wa.me/5531998331936"> <button class="cta-button1">Contato</button> </a>
+          <a href="https://www.instagram.com/afloravasos"> <button class="cta-button22">Saiba Mais</button> </a>
         </div>
       </div>
     </section>
@@ -95,8 +113,8 @@
           <h6>Não perca tempo! Entre em contato hoje mesmo para mais informações ou compras.</h6>
         </div>
         <div>
-          <a href="https://wa.me/5531999999999"> <button class="cta-button1">Contato</button> </a>
-          <a href="https://www.instagram.com/aflora"> <button class="cta-button22">Saiba Mais</button> </a>
+          <a href="https://wa.me/5531998331936"> <button class="cta-button1">Contato</button> </a>
+          <a href="https://www.instagram.com/afloravasos"> <button class="cta-button22">Saiba Mais</button> </a>
         </div>
       </section>
     </section>
@@ -149,10 +167,10 @@
 
       <div class="footer-info">
         <div class="footer-social-network">
-          <a href="https://www.instagram.com/aflora"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
-          <a href="https://wa.me/5531999999999"><img src="assets/images/whatsapp-icon.png" alt="whatsapp"></a>
-          <a href="https://www.facebook.com/aflora"><img src="assets/images/facebook-icon.svg" alt="Facebook"></a>
-          <a href="https://www.twiiter.com/aflora"><img src="assets/images/x-icon.svg" alt="X"></a>
+          <a href="https://www.instagram.com/afloravasos"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
+          <a href="https://wa.me/5531998331936"><img src="assets/images/whatsapp-icon.png" alt="whatsapp"></a>
+          <a href="https://www.facebook.com/afloravasos"><img src="assets/images/facebook-icon.svg" alt="Facebook"></a>
+          <a href="https://www.twiiter.com/afloravasos"><img src="assets/images/x-icon.svg" alt="X"></a>
         </div>
 
         <p class="m-0">© 2024 Aflora Vasos Decorativos. Todos os direitos reservados.</p>
