--- a/public/pages/blog-managment.html
+++ b/public/pages/blog-managment.html
@@ -19,11 +19,29 @@
 
 <body>
   <header>
-    <h3><a href="/">Aflorá</a></h3>
-    <div id="logged-content" class="header-right-content">
-      <h5><a href="/pages/products.html">Produtos</a></h5>
+    <div class="header-left-content">
+      <div class="small-screen-header">
+        <div class="dropdown manager-dropdown">
+          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fa fa-bars"></i>
+          </a>
+  
+          <ul class="dropdown-menu">
+            <li> <a class="dropdown-item" href="/pages/products.html">Produtos</a> </li>
+            <li> <a class="dropdown-item" href="/pages/blog.html">Blog</a> </li>
+          </ul>
+        </div>
+      </div>
+  
+      <h3><a href="/">Aflorá</a></h3>
+    </div>
 
-      <h5><a href="/pages/blog.html">Blog</a></h5>
+    <div id="logged-content" class="header-right-content">
+      <div class="large-screen-header">
+        <h5><a href="/pages/products.html">Produtos</a></h5>
+        <h5><a href="/pages/blog.html">Blog</a></h5>
+      </div>
     </div>
   </header>
 
@@ -61,10 +79,10 @@
 
       <div class="footer-info">
         <div class="footer-social-network">
-          <a href="https://www.instagram.com/aflora"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
-          <a href="https://wa.me/5531999999999"><img src="../assets/images/whatsapp-icon.png" alt="whatsapp"></a>
-          <a href="https://www.facebook.com/aflora"><img src="../assets/images/facebook-icon.svg" alt="Facebook"></a>
-          <a href="https://www.twiiter.com/aflora"><img src="../assets/images/x-icon.svg" alt="X"></a>
+          <a href="https://www.instagram.com/afloravasos"><img src="../assets/images/instagram-icon.svg" alt="Instagram"></a>
+          <a href="https://wa.me/5531998331936"><img src="../assets/images/whatsapp-icon.png" alt="whatsapp"></a>
+          <a href="https://www.facebook.com/afloravasos"><img src="../assets/images/facebook-icon.svg" alt="Facebook"></a>
+          <a href="https://www.twiiter.com/afloravasos"><img src="../assets/images/x-icon.svg" alt="X"></a>
         </div>
 
         <p class="m-0">© 2024 Aflora Vasos Decorativos. Todos os direitos reservados.</p>
@@ -72,7 +90,7 @@
     </div>
   </footer>
 
-  <!-- Delete product -->
+  <!-- Delete post -->
   <div class="modal fade" id="deletePostModal" aria-hidden="true" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -84,7 +102,7 @@
             <h4 class="text-center">Tem cereteza que deseja excluir este post?</h4>
 
             <div>
-              <button class="btn first-login-button" onclick="deletePost()">
+              <button id="deleteButton" class="btn first-login-button" onclick="deletePost()">
                 Sim
               </button>
 
@@ -98,7 +116,7 @@
     </div>
   </div>
 
-  <!-- Create/Update product -->
+  <!-- Create/Update post -->
   <div class="modal fade" id="createUpdatePostModal" aria-hidden="true" aria-labelledby="createUpdatePostLabel"
     tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
